--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - run: echo "deploy"
       - run: bash ./scripts/install_build_deps.sh
       - run: bash ./scripts/install_terraform.sh
+      - run: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - run: bash ./infrastructure/${tag}/apply.sh
       - run: echo "deployed successfully"
 
